--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.30.0",
     "music-metadata": "^10.5.1",
+    "pino": "^9.5.0",
     "prettier": "^3.3.3",
     "stylelint": "^16.10.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
