--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "electron-builder": "^25.1.8",
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.30.0",
+    "howler": "^2.2.4",
     "music-metadata": "^10.5.1",
     "pino": "^9.5.0",
     "prettier": "^3.3.3",
@@ -31,8 +32,5 @@
     "vue-router": "^4.4.5",
     "vue-tsc": "^2.1.8"
   },
-  "main": "dist-electron/main.js",
-  "dependencies": {
-    "howler": "^2.2.4"
-  }
+  "main": "dist-electron/main.js"
 }
