--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.2.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite | pino-pretty",
     "build": "vite build && electron-builder",
     "preview": "vite preview"
   },
@@ -18,6 +18,7 @@
     "howler": "^2.2.4",
     "music-metadata": "^10.5.1",
     "pino": "^9.5.0",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.3.3",
     "stylelint": "^16.10.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
