--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "music-player",
   "private": false,
-  "version": "0.2.0",
+  "version": "0.2.1",
   "type": "module",
   "scripts": {
     "dev": "vite | pino-pretty",
@@ -18,6 +18,7 @@
     "eslint-plugin-vue": "^9.30.0",
     "howler": "^2.2.4",
     "music-metadata": "^10.5.1",
+    "nouislider": "^15.8.1",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.3.3",
