--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "vue-router": "^4.4.5",
     "vue-tsc": "^2.1.8"
   },
-  "main": "dist-electron/main.js"
+  "main": "dist-electron/main.js",
+  "dependencies": {
+    "@master/normal.css": "^3.1.0"
+  }
 }
