--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "music-player",
+  "author": "JorgeDev",
   "private": false,
-  "version": "0.3.3",
+  "version": "0.3.4",
   "type": "module",
   "scripts": {
     "dev": "vite | pino-pretty",
     "build": "vite build && electron-builder",
     "preview": "vite preview"
+  },
+  "build": {
+    "extends": "electron-builder.json5"
   },
   "devDependencies": {
     "@master/css": "^1.37.8",
@@ -22,6 +26,7 @@
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.3.3",
+    "sharp": "^0.33.5",
     "stylelint": "^16.10.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard": "^36.0.1",
