--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -20,7 +20,7 @@
     artifactName: "${productName}-Windows-${version}-Setup.${ext}",
     asar: true,
     asarUnpack: ["**/node_modules/sharp/**/*", "**/node_modules/@img/**/*"],
-    icon: "build/icon.ico",
+    icon: "build/icon.png",
   },
   nsis: {
     oneClick: false,
@@ -31,6 +31,6 @@
   linux: {
     target: ["AppImage"],
     artifactName: "${productName}-Linux-${version}.${ext}",
-    icon: "build/icon.ico",
+    icon: "build/icon.png",
   },
 }
