--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "music-player",
   "author": "JorgeDev",
   "private": false,
-  "version": "0.4.4",
+  "version": "0.5.0",
   "type": "module",
   "scripts": {
     "dev": "vite | pino-pretty",
@@ -42,6 +42,7 @@
   },
   "main": "dist-electron/main.js",
   "dependencies": {
-    "@master/normal.css": "^3.1.0"
+    "@master/normal.css": "^3.1.0",
+    "pinia": "^3.0.3"
   }
 }
