--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "electron", "types", "lib/configuration.ts", "lib/readingDirectory.ts", "lib/songMetadataElectron.ts", "lib/time.ts", "lib/fullscreen.ts", "lib/music.ts", "lib/musicPlayer.ts", "lib/playbackPositionSlider.ts", "lib/progressBar.ts", "lib/songInfo.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "electron", "types",
+    "electron/core/configuration.ts", "lib/readingDirectory.ts", "lib/songMetadataElectron.ts",
+    "src/utils/timeFormatting.ts", "lib/music.ts", "lib/musicPlayer.ts", "lib/playbackPositionSlider.ts", "lib/progressBar.ts", "lib/songInfo.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
